config_v2/httpbin-gateway-oauth-keycloak.night.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: foo
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "httpbin.foo.svc.cluster.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: foo
  name: httpbin-vsvc
spec:
  hosts:
  - "httpbin.foo.svc.cluster.local"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /oauth2
    route:
    - destination:
        host: oauth2-proxy.foo.svc.cluster.local
        port:
          number: 80          
  - route:
    - destination:
        host: httpbin.foo.svc.cluster.local
        port:
          number: 8000
